# llm-course-datatalksclub

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: 02_price_prediction-checkpoint.ipynb  pandas_tutorial-checkpoint.ipynb
01-agentic-rag/: 01-rag-hw.ipynb  rag_helper_files.py
01-agentic-rag/.ipynb_checkpoints/: notebook-agentic-rag-checkpoint.ipynb
01-agentic-rag/part1/: notebook-agentic-rag.ipynb  persistence-rag-ingest.ipynb  persistence-rag.ipynb  rag.ipynb  rag_helper.py  rag_ingest.ipynb
01-agentic-rag/part2/: agents.ipynb  other_agents.ipynb
02-vector-search/: vector_search.ipynb  vector_search_notes_01.md  vector_search_notes_02.md  vector_search_notes_03.md  vector_search_notes_04.md  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
02-vector-search/llm-zoomcamp-hw2/: 02-search-vector-hw.ipynb
02-vector-search/llm-zoomcamp-onnx/: onnx-vector.ipynb
05-monitoring/: assistant.py
ml-zoomcamp-code/: pandas_tutorial.ipynb
ml-zoomcamp-code/01-intro/: 01-intro.ipynb
ml-zoomcamp-code/02-regression/: 02_price_prediction.ipynb
ml-zoomcamp-code/homeworks/: 01_homework_intro.ipynb
