[project]
name = "llm-zoomcamp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.0.11",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "toyaikit>=0.0.11",
]
