[project]
name = "llm-zoomcamp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.0.11",
    "numpy>=2.4.4",
    "onnxruntime>=1.27.0",
    "openai>=2.36.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "tokenizers>=0.22.2",
    "toyaikit>=0.0.11",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
